Fixed table border spacing.

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -220,6 +220,8 @@ pre {
 .table {
   margin-left:auto;
   margin-right:auto;
+  border-spacing: 0;
+  border-collapse: collapse;
   padding: 0; }
   table tr {
     border-top: 1px solid #cccccc;
